--- a/advanced_ui/IPC/local.properties
+++ b/advanced_ui/IPC/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 08 18:01:19 CST 2019
+#Sat Aug 08 20:22:25 CST 2020
 ndk.dir=C\:\\Users\\86139\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\86139\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\leo\\AppData\\Local\\Android\\Sdk
